Changed "read" input to checkbox

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <input type="text" id="pages" name="pages">
 
                         <label for="read">Read</label>
-                        <input type="text">
+                        <input type="checkbox" id="read" name="read">
 
                         <input type="button" value="Submit Book" class="submit-book">
                     </form>
