--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
         <div class="bottom">
             <div class="form-div hide">
                 <div class="form-class">
-                    <form action="">
+                    <form action="" id="book-form">
                         <label for="title">Title</label>
-                        <input type="text" id="title" name="title">
+                        <input type="text" id="title" name="title" required>
 
                         <label for="author">Author</label>
-                        <input type="text" id="author" name="author">
+                        <input type="text" id="author" name="author" required>
 
                         <label for="genre">Genre</label>
-                        <input type="text" id="genre" name="genre">
+                        <input type="text" id="genre" name="genre" required>
 
                         <label for="pages">Pages</label>
-                        <input type="text" id="pages" name="pages">
+                        <input type="number" id="pages" name="pages" required min="1">
 
                         <label for="read">Read</label>
                         <input type="checkbox" id="read" name="read">
 
-                        <input type="button" value="Submit Book" class="submit-book">
+                        <input type="submit" value="Submit Book" class="submit-book">
                     </form>
                 </div>
             </div>
